# cron-syslog-viewer

./: LICENSE  README.md  cron-syslog-viewer.cabal  default.nix
src/: Gnuplot.hs  Main.hs  Run.hs
test/: RunSpec.hs
