name:
  cron-syslog-viewer
version:
  0.1
-- synopsis:
-- description:
license:
  BSD3
license-file:
  LICENSE
author:
  Sönke Hahn
maintainer:
  soenke.hahn@zalora.com
copyright:
  (c) 2015 Zalora South East Asia Pte Ltd
category:
  System
build-type:
  Simple
-- extra-source-files:
cabal-version:
  >=1.10

executable y
  main-is:
    Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    base == 4.*
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
      -Wall -fno-warn-name-shadowing
      -threaded

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -fno-warn-name-shadowing
      -threaded
      -O0
  default-language:
      Haskell2010
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  build-depends:
      base == 4.*,
      hspec,
      interpolate,
      temporary
